Implement song library management and mock music generation
Backend Changes:
- Add audio_url column to songs table for storing generated music files
- Create Supabase Storage bucket for audio files with proper RLS policies
- Configure audio bucket to support MP3/WAV files up to 50MB
- Add database migrations for audio storage infrastructure

Frontend Changes:
- Add song deletion functionality with confirmation dialogs
- Implement mock ElevenLabs API endpoint that generates sample MP3 files
- Create music generation workflow: lyrics → mock processing → storage upload
- Add HTML5 audio players to song library for playback
- Update song cards with Generate Music/Regenerate Music buttons
- Add loading states and success notifications for music generation
- Enhance song library UI with expandable lyrics and audio controls

Features:
- Users can delete songs from their library with confirmation
- Mock music generation simulates 2-second processing delay
- Generated audio files are stored in user-specific folders
- Audio players appear automatically when music is available
- Supports both initial generation and regeneration of music
- Secure file storage with user-based access control

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -109,12 +109,12 @@ file_size_limit = "50MiB"
 # [storage.image_transformation]
 # enabled = true
 
-# Uncomment to configure local storage buckets
-# [storage.buckets.images]
-# public = false
-# file_size_limit = "50MiB"
-# allowed_mime_types = ["image/png", "image/jpeg"]
-# objects_path = "./images"
+# Configure storage buckets
+[storage.buckets.audio]
+public = true
+file_size_limit = "50MiB"
+allowed_mime_types = ["audio/mpeg", "audio/mp3", "audio/wav"]
+objects_path = "./audio"
 
 [auth]
 enabled = true
