--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ GLOO_API_URL=https://api.gloo.com/v1
 ELEVENLABS_API_KEY=your-elevenlabs-api-key
 
 # Application Configuration
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=https://your-app.vercel.app
