Make AI model configurable via GLOO_MODEL environment variable
- Add GLOO_MODEL env var with Claude Sonnet 4 as default
- Update Gloo client to use configurable model instead of hardcoded
- Add setModel() and getModel() methods for runtime configuration
- Update documentation with model configuration examples
- Expose model setting through Next.js config for client access

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,9 @@ SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 
 # Gloo AI Configuration
-GLOO_API_KEY=your-gloo-api-key
-GLOO_API_URL=https://api.gloo.com/v1
+GLOO_CLIENT_ID=your-gloo-client-id
+GLOO_CLIENT_SECRET=your-gloo-client-secret
+GLOO_MODEL=us.anthropic.claude-sonnet-4-20250514-v1:0
 
 # ElevenLabs Configuration
 ELEVENLABS_API_KEY=your-elevenlabs-api-key
