Fix environment configuration and add Scripture API feature flag
- Update environment variable documentation and examples
- Add ENABLE_SCRIPTURE_API feature flag with graceful fallback
- Fix frontend environment variable handling for production deployment
- Improve multi-turn Bible reference processing in chat
- Add comprehensive environment validation script
- Update .gitignore to exclude Vercel deployment files

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ ELEVENLABS_API_KEY=your-elevenlabs-api-key
 
 # Application Configuration
 NEXT_PUBLIC_APP_URL=https://your-app.vercel.app
+
+# Feature Flags
+ENABLE_SCRIPTURE_API=false
