Update frontend submodule and add ElevenLabs prompt versioning
- Update frontend to latest commit with ElevenLabs fixes
- Add ELEVENLABS_PROMPT_VERSION to .env.example
- Document ElevenLabs prompt system in CLAUDE.md
- Add mock server plan for testing ElevenLabs integration

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ NEXT_PUBLIC_APP_URL=https://your-app.vercel.app
 
 # Feature Flags
 ENABLE_SCRIPTURE_API=false
+
+# Prompt Configuration
+SUNDAY_SCHOOL_PROMPT_VERSION=v2.1
