feat: Configure Vercel to use Bun runtime
- Add bunVersion: 1 to vercel.json for native Bun runtime
- Update install command to use bun install
- Fix root page to avoid server-side Supabase auth (incompatible with Bun runtime)
- Simplify root page to redirect to /home
- Remove deprecated experimental config from next.config.ts
- Add .turbo/ to .gitignore

This enables Vercel deployments to run on Bun runtime instead of Node.js,
fixing module resolution issues with Bun's package format.

Production URL: https://frontend-one-tau-55.vercel.app

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sunday-school-music-creator",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "bun@1.3.5",
   "workspaces": {
     "packages": [
       "apps/*",
@@ -42,14 +43,18 @@
     }
   },
   "devDependencies": {
-    "typescript": "catalog:",
     "@types/node": "catalog:",
-    "eslint": "catalog:"
+    "eslint": "catalog:",
+    "next": "catalog:",
+    "react": "catalog:",
+    "react-dom": "catalog:",
+    "turbo": "^2.7.1",
+    "typescript": "catalog:"
   },
   "scripts": {
-    "dev": "bun run --filter '*' dev",
-    "build": "bun run --filter '*' build",
-    "start": "bun run --filter '*' start",
-    "lint": "bun run --filter '*' lint"
+    "dev": "turbo dev",
+    "build": "turbo build",
+    "start": "turbo start",
+    "lint": "turbo lint"
   }
 }
