--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,6 +16,8 @@
     "@upstash/redis": "^1.35.5",
     "@vercel/kv": "^3.0.0",
     "next": "15.5.9",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "next-themes": "^0.4.4",
     "next-mdx-remote": "^4.4.1",
     "framer-motion": "^11.18.0",
